# Language-Training-Tutor

python-LTT/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
python-LTT/.github/: ISSUE_TEMPLATE.md
python-LTT/docs/: index.md  installation.md  usage.md
python-LTT/src/python_LTT/: __init__.py  cli.py  main.py  utils.py
python-LTT/tests/: __init__.py  test_python_LTT.py
